--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@ __pycache__/
 
 # C extensions
 *.so
-
+*.csv
+*.parquet
+*.zip
+*.ckpt
 # Distribution / packaging
+lightning_logs/
 .Python
 build/
 develop-eggs/
